# gst-tux

./: .gitignore  README.md  camrec.sh  change-format.cpp  commands.sh  data-probe.cpp  dynamic-change.cpp  input-selector-test.c  link_elements_with_filter.cpp  msg_callback.cpp  new-cmd.sh  pipeline_samples.md  play-section.cpp  temp.cpp
avimux/: CMakeLists.txt  main.cpp
camera/: main.cpp
concept/: CMakeLists.txt  main.cpp
cpuv4lsw/: CMakeLists.txt  main.cpp
custom-plugin/: cmd.sh
data-probe/: CMakeLists.txt  main.cpp
dynamic/: CMakeLists.txt  main.cpp
filesrc/: CMakeLists.txt  main.cpp
hello/: CMakeLists.txt  main.cpp
pad-cap/: CMakeLists.txt  main.cpp
playbin/: CMakeLists.txt  main.cpp
short-cut/: CMakeLists.txt  main.cpp
switch/: CMakeLists.txt  main.cpp
sync-rtp/: CMakeLists.txt  gstmyfilter.c  gstmyfilter.h  main.cpp  my_frame_id_meta.cpp  my_frame_id_meta.h
test-1/: CMakeLists.txt  main.cpp
test-2/: main.cpp
test-j/: CMakeLists.txt  main.cpp
thread/: CMakeLists.txt  main.cpp
time/: CMakeLists.txt  main.cpp
twov4l/: main.cpp
v4l_swich/: main.cpp
v4lapp/: main.cpp
v4lapp/twov4l/: main.cpp
v4lapp/v4lnvoverlay/: CMakeLists.txt
v4lnvoverlay/: main.cpp
v4lsw/: main.cpp
